@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Updated copyright year
+
 0.73.1    2017-06-02 01:02:52
           - More efficient IO::stat
           - Added more broken smokers
